examples/test/testpolicy2530.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2530
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key40: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value10
          key44: value28
      podSelector:
        matchLabels:
          key17: value18
          key47: value21
          key40: value11
